--- a/src/Containers/HeroSection/HeroSection.module.css
+++ b/src/Containers/HeroSection/HeroSection.module.css
@@ -2,8 +2,8 @@
   display: flex;
   align-items: center;
   height: 100%;
-  padding: 100px;
   gap: 3rem;
+  padding: 100px 0;
 }
 
 .textSection {
