--- a/src/Containers/HeroSection/HeroSection.module.css
+++ b/src/Containers/HeroSection/HeroSection.module.css
@@ -17,6 +17,12 @@
   justify-content: center;
 }
 
+.imageSection > img {
+  max-height: 70vh;
+  max-width: 100%;
+  object-fit: cover;
+}
+
 .textSection > h4 {
   font-family: Poppins;
   font-size: 50px;
