--- a/src/Containers/HeroSection/HeroSection.module.css
+++ b/src/Containers/HeroSection/HeroSection.module.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   align-items: center;
-  height: 100%;
+  height: calc(100vh - 100px);
   gap: 3rem;
   padding: 100px 0;
 }
