--- a/src/Components/WagerCard/WagerCard.module.css
+++ b/src/Components/WagerCard/WagerCard.module.css
@@ -17,9 +17,19 @@
   box-shadow: 0px 5px 4px 0px #00000040;
 }
 
-.container > img {
-  width: 100%;
-  height: 380px;
+.container .userSection {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  color: #ffffffff;
+}
+
+.user {
+  max-width: 40%;
+}
+.user > img {
+  width: 40px;
+  border-radius: 50%;
   object-fit: cover;
 }
 
