--- a/src/Containers/ListItems/ListItems.module.css
+++ b/src/Containers/ListItems/ListItems.module.css
@@ -1,6 +1,6 @@
 .container {
   padding: 32px 0;
-  display: flex;
+  /* display: flex; */
   align-items: center;
   justify-content: flex-start;
   flex-wrap: wrap;
