--- a/src/Containers/WagerInfo/WagerInfo.module.css
+++ b/src/Containers/WagerInfo/WagerInfo.module.css
@@ -21,7 +21,7 @@
   display: block;
 }
 
-.textSection > div > span:nth-child(1) {
+.textSection > div > span:nth-child(1), .textSection > div > span:nth-child(3) {
   font-family: Poppins;
   font-size: 20px;
   font-weight: 500;
