--- a/src/Components/Error/Error.module.css
+++ b/src/Components/Error/Error.module.css
@@ -4,14 +4,17 @@
   align-items: center;
   gap: 0.5rem;
   color: #fff;
-  font-family: Poppins;
-  font-size: 13px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px;
   padding: 0.5rem;
   border-radius: 5px;
   border: 1px solid red;
   background: transparent;
   margin: 1rem 0;
+}
+
+.container > span {
+  font-family: Poppins;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
 }
