--- a/src/Containers/WagerInfo/WagerInfo.module.css
+++ b/src/Containers/WagerInfo/WagerInfo.module.css
@@ -7,8 +7,6 @@
   padding: 2rem;
 }
 
-
-
 .textSection {
   flex: 1;
 }
@@ -21,7 +19,8 @@
   display: block;
 }
 
-.textSection > div > span:nth-child(1), .textSection > div > span:nth-child(3) {
+.textSection > div > span:nth-child(1),
+.textSection > div > span:nth-child(3) {
   font-family: Poppins;
   font-size: 20px;
   font-weight: 500;
@@ -31,7 +30,7 @@
   color: #ffffff;
 }
 
-.textSection > div > button{
+.textSection > div > button {
   max-width: 30%;
 }
 
@@ -53,13 +52,13 @@
   margin-top: 2rem;
 }
 
-.imageSection{
+.imageSection {
   display: flex;
   align-items: center;
   position: relative;
   width: 10%;
 }
-.noBettor{
+.noBettor {
   width: 40px;
   height: 40px;
   display: flex;
@@ -71,18 +70,28 @@
   border-radius: 50%;
 }
 
-.imageSection > img:nth-child(2), .imageSection > div:nth-child(2){
+.imageSection > img:nth-child(2),
+.imageSection > div:nth-child(2) {
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 30px; 
+  left: 30px;
   margin: auto;
 }
 
-  .imageSection > img {
-    width: 40px;
-    border-radius: 50%;
-    object-fit: cover;
-  }
+.imageSection > img {
+  width: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+}
 
-
+.error {
+  font-family: Poppins;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 140%;
+  letter-spacing: 0em;
+  text-align: left;
+  margin-top: 0.5rem;
+  color: red;
+}
